tests/rosetta/transpiler/Clojure/church-numerals-2.error
run error: exit status 1
Syntax error compiling at (/workspace/mochi/tests/rosetta/transpiler/Clojure/church-numerals-2.clj:21:74).
Unable to resolve symbol: f in this context

Full report at:
/tmp/clojure-4467041536496822776.edn
